|
Quick Lists
|
|
Bug ID:
|
6753795
|
|
Votes
|
0
|
|
Synopsis
|
HotSpot crash in strlen() when JVMTI is used
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs14(b06)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
6744783
|
|
Submit Date
|
29-SEP-2008
|
|
Description
|
HotSpot crashes in strlen() when JVMTI is used.
Posted Date : 2008-09-29 16:16:15.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
TraceJVMTI should be checked for not nullness.
Posted Date : 2008-09-29 16:19:45.0
http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/dbec32712472
Posted Date : 2008-09-30 21:07:16.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |