6753795: HotSpot crash in strlen() when JVMTI is used

Test for null instead of strlen

Reviewed-by: rasbold